...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="Mb3-EO-Nyd">
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email Address (optional)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y6F-zy-dvC" customClass="VTTextField">
                    <rect key="frame" x="15" y="10" width="290" height="48"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="48" id="pR2-gk-kF5"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
...
                    <rect key="frame" x="0.0" y="512" width="320" height="56"/>
                    <color key="backgroundColor" red="0.098039215690000001" green="0.63921568630000003" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="56" id="FVX-jx-6Ri"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                    <state key="normal" title="Confirm Payment"/>
                    <connections>
                        <action selector="paymentPressed:" destination="-1" eventType="touchUpInside" id="AJs-fi-x5u"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j90-rv-bdf" customClass="VTButton">
                    <rect key="frame" x="0.0" y="469" width="320" height="43"/>
...
                        <userDefinedRuntimeAttribute type="number" keyPath="borderLineWidth">
                            <integer key="value" value="1"/>
                        </userDefinedRuntimeAttribute>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="topLine" value="YES"/>
                    </userDefinedRuntimeAttributes>
                </view>
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DetailDisclosure.png" translatesAutoresizingMaskIntoConstraints="NO" id="pEi-3q-KUJ">
                    <rect key="frame" x="15" y="304" width="50" height="50"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="50" id="5Wk-l1-gKd"/>
                    </constraints>
                </imageView>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n76-M3-ojC">
...
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N8c-zr-atS">
                            <rect key="frame" x="0.0" y="0.0" width="225" height="12"/>
                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                            <color key="textColor" red="0.0" green="0.59999999999999998" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Once you confirm payment, you will be unable to change payment method" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="225" transl
                            <rect key="frame" x="0.0" y="12" width="225" height="47"/>
                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                            <color key="textColor" red="0.42745098040000001" green="0.42745098040000001" blue="0.44705882349999998" alpha="1" colorSpace="calibratedRGB"/>
                            <nil key="highlightedColor"/>
                        </label>
                    </subviews>
...
