...
                    <rect key="frame" x="8" y="520" width="304" height="40"/>
                    <color key="backgroundColor" red="0.098039215690000001" green="0.63921568630000003" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="CgY-SN-5DN"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="17"/>
                    <state key="normal" title="Finish Payment"/>
                    <connections>
                        <action selector="finishPressed:" destination="-1" eventType="touchUpInside" id="ny9-Me-2NN"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DQf-po-YeP" customClass="MidtransUIButton">
                    <rect key="frame" x="8" y="477" width="304" height="35"/>
...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bFQ-GS-8vL" customClass="MidtransUIButton">
                    <rect key="frame" x="0.0" y="442" width="320" height="35"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="35" id="Aho-44-q9m"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                    <state key="normal" title="Copy VA Number">
                        <color key="titleColor" red="0.0" green="0.59999999999999998" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="topLine" value="YES"/>
                        <userDefinedRuntimeAttribute type="color" keyPath="topLineColor">
                            <color key="value" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
