...
    //create VA group model
    NSString *_desc = [VTClassHelper getTranslationFromAppBundleForString:@"Pay from ATM Bersama, Prima or Alto"];
    NSDictionary *_dict = @{@"description":_desc,
                            @"id":@"va",
                            @"identifier":@"va",
                            @"shortName":@"atm transfer",
                            @"title":@"ATM/Bank Transfer"
                            };
    [models insertObject:[[MIDPaymentDetail alloc] initWithDictionary:_dict] atIndex:1];
    
    self.models = models;
    [self.tableView reloadData];
}
...
