...
    
    UIBarButtonItem *settingBtn =
    [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"settings"]
                                     style:UIBarButtonItemStylePlain
                                    target:self
                                    action:@selector(settingsPressed:)];
    settingBtn.accessibilityIdentifier = @"demo_navbar_setting";
    
    UIBarButtonItem *profileButton =
    [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"account_icon"]
                                     style:UIBarButtonItemStylePlain
                                    target:self
                                    action:@selector(profileButtonDidPressed:)];
...
