...
                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QzT-QR-Kgb" customClass="MidtransUIButton">
                    <rect key="frame" x="135" y="203" width="135" height="47"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="47" id="LXz-Jh-mU5"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <state key="normal" title="Confirm"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="topLine" value="YES"/>
                        <userDefinedRuntimeAttribute type="color" keyPath="topLineColor">
                            <color key="value" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                        </userDefinedRuntimeAttribute>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="leftLine" value="YES"/>
...
